--- a/app/src/main/res/layout/activity_external_links.xml
+++ b/app/src/main/res/layout/activity_external_links.xml
@@ -57,8 +57,10 @@
 
 
             <ImageView
-                android:layout_width="150px"
-                android:layout_height="150px"
+                android:padding="20dp"
+                android:adjustViewBounds="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:src="@drawable/iasio"
                 android:onClick="oncharity1Click"
                 android:layout_marginLeft="10dp"
@@ -66,27 +68,28 @@
                 android:layout_weight="1"/>
 
     <LinearLayout
-        android:layout_marginLeft="20dp"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="2"
+        android:layout_gravity="center"
 
        >
             <TextView
                 android:autoLink="web"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:text="@string/charity1"
                 android:textColor="@color/black"
                 android:gravity="right"
-                android:textSize="20dp"
+                android:textSize="17dp"
                 android:id="@+id/link1"/>
 
         <TextView
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="@string/charity1Phone"
             android:textColor="@color/black"
 
@@ -95,12 +98,16 @@
             android:gravity="center"/>
         </LinearLayout>
 
-            <Button
+            <ImageView
+                android:padding="20dp"
+                android:adjustViewBounds="true"
                 android:id="@+id/email_charity_1"
                 android:layout_weight="1"
-                android:layout_width="150px"
-                android:layout_height="150px"
-                android:background="@drawable/mail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_mail_outline_black_24dp"
                 android:onClick="sendContact"
 
                 />
@@ -121,170 +128,85 @@
 
             </LinearLayout>
 
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:background="#000000" />
+
+
+        <!--Changedbox-->
+    <LinearLayout
+        android:background="@color/grey"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
 
 
         <LinearLayout
-            android:background="@color/grey"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:paddingTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:paddingBottom="5dp"
-                >
-
-
-
-                <ImageView
-                    android:layout_width="150px"
-                    android:layout_height="150px"
-                    android:src="@drawable/ucasedh1"
-                    android:onClick="oncharity2Click"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"/>
-
-                <LinearLayout
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight="2"
-
-                    >
-                    <TextView
-                        android:autoLink="web"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/charity2"
-                        android:textColor="@color/black"
-                        android:gravity="right"
-                        android:textSize="20dp"/>
-
-                    <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/charity2Phone"
-                        android:textColor="@color/black"
-
-
-                        android:textSize="20dp"
-                        android:gravity="center"/>
-                </LinearLayout>
-
-                <Button
-
-                    android:layout_weight="1"
-                    android:layout_width="150px"
-                    android:layout_height="150px"
-                    android:background="@drawable/mail"
-                    android:onClick="sendContact"
-                    android:id="@+id/email_charity_2"
-                    />
-
-
-            </LinearLayout>
-        </LinearLayout>
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:background="#000000" />
-
-        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:paddingBottom="5dp"
             >
 
-        </LinearLayout>
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:background="#000000" />
-
-        <LinearLayout
-            android:background="@color/grey"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
 
-
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:paddingTop="10dp"
+            <ImageView
+                android:padding="20dp"
+                android:adjustViewBounds="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:paddingBottom="5dp"
+                android:src="@drawable/ucasedh1"
+                android:onClick="oncharity2Click"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"/>
+
+            <LinearLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+
                 >
+                <TextView
+                    android:autoLink="web"
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/charity2"
+                    android:textColor="@color/black"
+                    android:gravity="right"
+                    android:textSize="17dp"
+                    android:id="@+id/link2"/>
 
-
-
-                <ImageView
-                    android:layout_width="150px"
-                    android:layout_height="150px"
-                    android:src="@drawable/carafterprison"
-                    android:onClick="oncharity3Click"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"/>
-
-                <LinearLayout
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight="2"
-
-                    >
-                    <TextView
-                        android:autoLink="web"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/charity3"
-                        android:textColor="@color/black"
-                        android:gravity="right"
-                        android:textSize="15dp"/>
-
-                    <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/charity3Phone"
-                        android:textColor="@color/black"
-
-
-                        android:textSize="20dp"
-                        android:gravity="center"/>
-                </LinearLayout>
-
-                <Button
-
-                    android:layout_weight="1"
-                    android:layout_width="150px"
-                    android:layout_height="150px"
-                    android:background="@drawable/mail"
-                    android:onClick="sendContact"
-                    android:id="@+id/email_charity_3"
-                    />
-
-
+                <TextView
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/charity2Phone"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    android:gravity="center"/>
             </LinearLayout>
+
+            <ImageView
+                android:padding="20dp"
+                android:adjustViewBounds="true"
+                android:id="@+id/email_charity_2"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_mail_outline_black_24dp"
+                android:onClick="sendContact"
+
+                />
+
+
+        </LinearLayout>
         </LinearLayout>
         <View
             android:layout_width="fill_parent"
@@ -292,13 +214,6 @@
             android:background="#000000" />
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            >
-
-        </LinearLayout>
 
         <View
             android:layout_width="fill_parent"
@@ -326,8 +241,10 @@
 
 
                 <ImageView
-                    android:layout_width="150px"
-                    android:layout_height="150px"
+                    android:padding="20dp"
+                    android:adjustViewBounds="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:src="@drawable/bridge"
                     android:onClick="oncharity4Click"
                     android:layout_marginLeft="10dp"
@@ -335,42 +252,46 @@
                     android:layout_weight="1"/>
 
                 <LinearLayout
-                    android:layout_marginLeft="20dp"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="2"
+                    android:layout_gravity="center"
 
                     >
                     <TextView
                         android:autoLink="web"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:text="@string/charity4"
                         android:textColor="@color/black"
                         android:gravity="right"
-                        android:textSize="20dp"/>
+                        android:textSize="17dp"
+                        android:id="@+id/link4"/>
 
                     <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:text="@string/charity4Phone"
                         android:textColor="@color/black"
-
-
                         android:textSize="20dp"
                         android:gravity="center"/>
                 </LinearLayout>
 
-                <Button
-
-                    android:layout_weight="1"
-                    android:layout_width="150px"
-                    android:layout_height="150px"
-                    android:background="@drawable/mail"
-                    android:onClick="oncharity4mail"
+                <ImageView
+                    android:padding="20dp"
+                    android:adjustViewBounds="true"
                     android:id="@+id/email_charity_4"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/ic_mail_outline_black_24dp"
+                    android:onClick="sendContact"
+
                     />
 
 
@@ -381,13 +302,8 @@
             android:layout_height="2dp"
             android:background="#000000" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            >
 
-        </LinearLayout>
+
 
 
 
