--- a/app/src/main/res/layout/activity_external_links.xml
+++ b/app/src/main/res/layout/activity_external_links.xml
@@ -302,6 +302,88 @@
             android:layout_height="2dp"
             android:background="#000000" />
 
+        <LinearLayout
+            android:background="@color/grey"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:paddingTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:paddingBottom="5dp"
+                >
+
+
+
+                <ImageView
+                    android:padding="20dp"
+                    android:adjustViewBounds="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/carafterprison"
+                    android:onClick="oncharity3Click"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"/>
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center"
+
+                    >
+                    <TextView
+                        android:autoLink="web"
+                        android:layout_weight="3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/charity3"
+                        android:textColor="@color/black"
+                        android:gravity="right"
+                        android:textSize="17dp"
+                        android:id="@+id/link3"/>
+
+                    <TextView
+                        android:layout_weight="3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/charity3Phone"
+                        android:textColor="@color/black"
+                        android:textSize="20dp"
+                        android:gravity="center"/>
+                </LinearLayout>
+
+                <ImageView
+                    android:padding="20dp"
+                    android:adjustViewBounds="true"
+                    android:id="@+id/email_charity_3"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/ic_mail_outline_black_24dp"
+                    android:onClick="sendContact"
+
+                    />
+
+
+            </LinearLayout>
+        </LinearLayout>
+
 
 
 
