--- a/app/src/main/res/layout-land/activity_mission_statement.xml
+++ b/app/src/main/res/layout-land/activity_mission_statement.xml
@@ -3,9 +3,8 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:layout_width="match_parent"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
     android:background="@color/white"
     >
 
@@ -23,7 +22,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/iprt_white_logo_land"
+            android:src="@drawable/landscape_main_logo_dimention"
             android:adjustViewBounds="true"
             android:paddingTop="15dp"
             android:paddingBottom="25dp"
