--- a/app/src/main/res/layout/activity_mission_statement.xml
+++ b/app/src/main/res/layout/activity_mission_statement.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
+<!--Tomas: Changed this:
+   android:layout_height="wrap_content"
+   android:layout_margin="10dp"
+   android:layout_width="match_parent"
+   To:-->
     <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:layout_width="match_parent"
+
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
     android:background="@color/white"
     >
 
@@ -20,7 +24,6 @@
     android:paddingRight="10dp"
     android:paddingTop="10dp"
     android:orientation="vertical"
-    android:backgroundTint="@color/white"
     android:layout_marginBottom="10dp"
     tools:context="ie.iprt.spentconvictioncalculator.AboutActivity">
     <ImageView
