--- a/app/src/main/res/layout-land/activity_home_screen.xml
+++ b/app/src/main/res/layout-land/activity_home_screen.xml
@@ -13,6 +13,13 @@
             android:src="@drawable/landscape_main_logo_dimention"
             android:adjustViewBounds="true"
             />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/subtitle"
+        android:textAlignment="center"
+        android:id="@+id/subtitle"
+        android:textSize="15dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
