--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -19,6 +19,14 @@
         android:paddingTop="15dp"
         android:paddingBottom="25dp"
         />
+    <!--Customer request-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/subtitle"
+        android:textAlignment="center"
+        android:id="@+id/subtitle"
+        android:textSize="20dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
