--- a/app/src/main/res/layout/activity_external_links.xml
+++ b/app/src/main/res/layout/activity_external_links.xml
@@ -33,6 +33,183 @@
 
         </LinearLayout>
 
+        <!--template-->
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
+
+        <LinearLayout
+            android:background="@color/grey"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:paddingTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:paddingBottom="5dp"
+                >
+
+
+
+                <ImageView
+                    android:padding="20dp"
+                    android:adjustViewBounds="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/citizen1"
+
+                    android:onClick="FormActivity6"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"/>
+
+
+                <ImageView
+                    android:autoLink="web"
+                    android:padding="20dp"
+                    android:adjustViewBounds="true"
+                    android:onClick="sendContact"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/ic_mail_outline_black_24dp"
+                    android:id="@+id/email_charity_6"
+
+
+                    />
+
+
+            </LinearLayout>
+            <LinearLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+
+                >
+                <TextView
+                    android:autoLink="web"
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/charity6"
+                    android:textColor="@color/black"
+                    android:gravity="right"
+                    android:textSize="28dp"
+                    android:id="@+id/link6"/>
+
+                <TextView
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/charity6Phone"
+                    android:textColor="@color/black"
+                    android:textSize="25dp"
+                    android:gravity="center"
+                    android:layout_marginBottom="10dp"/>
+            </LinearLayout>
+        </LinearLayout>
+
+
+
+        <!--template-->
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
+
+        <LinearLayout
+            android:background="@color/grey"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:paddingTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:paddingBottom="5dp"
+                >
+
+
+
+                <ImageView
+                    android:padding="20dp"
+                    android:adjustViewBounds="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/justice1"
+
+                    android:onClick="FormActivity5"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"/>
+
+
+                <ImageView
+                    android:autoLink="web"
+                    android:padding="20dp"
+                    android:adjustViewBounds="true"
+                    android:onClick="sendContact"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/ic_mail_outline_black_24dp"
+                    android:id="@+id/email_charity_5"
+
+
+                    />
+
+
+            </LinearLayout>
+            <LinearLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+
+                >
+                <TextView
+                    android:autoLink="web"
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/charity5"
+                    android:textColor="@color/black"
+                    android:gravity="right"
+                    android:textSize="30dp"
+                    android:id="@+id/link5"/>
+
+                <TextView
+                    android:layout_weight="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/charity5Phone"
+                    android:textColor="@color/black"
+                    android:textSize="25dp"
+                    android:gravity="center"
+                    android:layout_marginBottom="10dp"/>
+            </LinearLayout>
+        </LinearLayout>
 
 
 
