--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -11,8 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:orientation="vertical"
         tools:context="ie.iprt.spentconvictioncalculator.AboutActivity">
@@ -23,8 +21,7 @@
             android:src="@drawable/home_screen_main_logo"
             android:adjustViewBounds="true"
             android:paddingTop="15dp"
-            android:paddingBottom="25dp"
-            />
+            android:paddingBottom="25dp" />
 
         <TextView
             android:paddingLeft="10dp"
