--- a/app/src/main/res/layout-land/activity_about.xml
+++ b/app/src/main/res/layout-land/activity_about.xml
@@ -36,6 +36,7 @@
             android:textStyle="bold|italic"
             android:textSize="16dp"
             android:id="@+id/about_text_id_font"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -102,8 +103,8 @@
             android:textColor="@color/black"
             android:textStyle="bold|italic"
             android:textSize="16dp"
-            android:id="@+id/about_developers_id_font"
-            android:text="@string/about_developers"/>
+            android:text="@string/about_developers"
+            android:id="@+id/about_developers_id_font"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -250,7 +251,6 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:textColor="@color/black"
-            android:textStyle="bold|italic"
             android:textSize="16dp"
             android:text="@string/about_iskill"
             android:id="@+id/about_iskill_id_font"/>
@@ -262,7 +262,8 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/iskill_description"/>
+            android:text="@string/iskill_description"
+            />
 
         <Button
             android:layout_marginLeft="10dp"
